--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://kit.fontawesome.com/92ae6f1716.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/92ae6f1716.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="loading-screen-effect"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
